--- a/index.html
+++ b/index.html
@@ -522,5 +522,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/mobmodal.js"></script>
   </body>
 </html>
