--- a/index1.html
+++ b/index1.html
@@ -23,7 +23,44 @@
     <link rel="stylesheet" href="./css/styles1.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <header class="header-border">
+        <div class="container header-container">
+          <nav class="header-navigation">
+            <a class="link web" href="./index.html"
+              >Web<span class="web-studio">Studio</span></a
+            >
+            <ul class="header-navigation-list list">
+              <li class="navigation-list">
+                <a href="./index.html" class="header-nav link current"
+                  >Studio</a
+                >
+              </li>
+              <li class="navigation-list">
+                <a href="./portfolio.html" class="header-nav link">Portfolio</a>
+              </li>
+              <li class="navigation-list">
+                <a href="" class="header-nav link">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="adress">
+            <ul class="header-navigation-adress list">
+              <li>
+                <a class="btn-adress link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com
+                </a>
+              </li>
+              <li>
+                <a class="btn-adress link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+      </header>
+    </header>
     <main></main>
     <footer class="footer">
       <div class="container footer-container">
