--- a/index1.html
+++ b/index1.html
@@ -64,47 +64,49 @@
     <main></main>
     <footer class="footer">
       <div class="container footer-container">
-        <div class="footer-studio-flex">
-          <a href="./index.html" class="link web-footer"
-            >Web<span class="web-studio-footer">Studio</span>
-          </a>
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
-        <div class="footer-social-links">
-          <p class="footer-social-media">Social media</p>
-          <ul class="list footer-social-list">
-            <li class="footer-social-item">
-              <a href="" class="svg-link">
-                <svg class="social-link" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram-2"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social-item">
-              <a href="" class="svg-link">
-                <svg class="social-link" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter-1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social-item">
-              <a href="" class="svg-link">
-                <svg class="social-link" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook-1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social-item">
-              <a href="" class="svg-link">
-                <svg class="social-link" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin-1"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+        <div class="footer-tablet">
+          <div class="footer-studio-flex">
+            <a href="./index.html" class="link web-footer"
+              >Web<span class="web-studio-footer">Studio</span>
+            </a>
+            <p class="footer-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="footer-social-links">
+            <p class="footer-social-media">Social media</p>
+            <ul class="list footer-social-list">
+              <li class="footer-social-item">
+                <a href="" class="svg-link">
+                  <svg class="social-link" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a href="" class="svg-link">
+                  <svg class="social-link" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a href="" class="svg-link">
+                  <svg class="social-link" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a href="" class="svg-link">
+                  <svg class="social-link" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="footer__form">
           <p class="footer__label">Subscribe</p>
