--- a/portfolio.html
+++ b/portfolio.html
@@ -26,12 +26,12 @@
     <header class="header-border">
       <div class="container header-container">
         <nav class="header-navigation">
-          <a class="link web" href="./index.html"
+          <a class="link web" href="./index1.html"
             >Web<span class="web-studio">Studio</span></a
           >
           <ul class="header-navigation-list list">
             <li class="navigation-list">
-              <a href="./index.html" class="header-nav link">Studio</a>
+              <a href="./index1.html" class="header-nav link">Studio</a>
             </li>
             <li class="navigation-list">
               <a href="./portfolio.html" class="header-nav link current"
