--- a/index1.html
+++ b/index1.html
@@ -60,7 +60,7 @@
             <use href="./images/icons.svg#icon-hamburger"></use>
           </svg>
         </button>
-		  <div class="mobile__modal" data-menu>
+		  <div class="mobile__modal is-hidden" data-menu>
 			<div class="container">
 				<ul class="mobile__list list">
 					<li class="mobile__item ">
@@ -75,17 +75,17 @@
 				 </ul>
 			 <div class="mobile__bottom">
 				 <ul class="mobile__contacts">
-            <li class="mobile__list">
+            <li class="mobile__list list">
               <a
-                class="mobile__phone link  btn"
+                class="mobile__phone link"
 					 href="tel:+380961111111"
               >
 				  +38 096 111 11 11</a
               >
             </li>
-            <li class="mobile__list">
+            <li class="mobile__list list">
 					<a
-					  class="mobile__emailadress link   btn"
+					  class="mobile__emailadress link"
 					  href="mailto:info@devstudio.com"
 					>
 					info@devstudio.com</a
@@ -93,16 +93,40 @@
 				 </li>
             </li>
           </ul>
-			 <ul class="mobile__society">
-				 <li class="societ__item"><a href="#" class="societ__link link">Instagram</a></li>
-				 <li class="societ__item"><a href="#" class="societ__link link">Twitter</a></li>
-				 <li class="societ__item"><a href="#" class="societ__link link">Facebook</a></li>
-				 <li class="societ__item"><a href="#" class="societ__link link">LinkedIn</a></li>
-			 </ul>
+			 <ul class="list mobile__society">
+            <li class="societ__item">
+              <a href="" class="svg-link">
+                <svg class="social-link" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="societ__item">
+              <a href="" class="svg-link">
+                <svg class="social-link" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="societ__item">
+              <a href="" class="svg-link">
+                <svg class="social-link" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="societ__item">
+              <a href="" class="svg-link">
+                <svg class="social-link" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
 			</div>
 			 <button class="menu__svg" type="button" data-menu-close>
-				<svg class="menu__close" width="18" height="18">
-				  <use href="./images/symbol-defs.svg#icon-xmark"></use>
+				<svg class="menu__close" width="8" height="8">
+				  <use href="./images/icons.svg#icon-close"></use>
 				</svg>
 			 </button>
 			</div> 
