--- a/index1.html
+++ b/index1.html
@@ -134,7 +134,16 @@
 	</div>
       </div>
     </header>
-    <main></main>
+    <main>
+		<section class="heero section">
+			<div class="container">
+			  <h1 class="heero-text">Effective Solutions for Your Business</h1>
+			  <button type="button" class="btn-heero" data-modal-open>
+				 Order Service
+			  </button>
+			</div>
+		 </section>
+	 </main>
     <footer class="footer">
       <div class="container footer-container">
         <div class="footer-tablet">
