--- a/index1.html
+++ b/index1.html
@@ -143,6 +143,61 @@
 			  </button>
 			</div>
 		 </section>
+		 <section class="description section">
+			<div class="container">
+			  <h2 class="visually-hidden">Our Rules</h2>
+			  <ul class="list rules-main-list">
+				 <li class="rules-list">
+					<div class="rules-list-svg">
+					  <svg width="64" height="64">
+						 <use href="./images/icons.svg#icon-antenna-1"></use>
+					  </svg>
+					</div>
+					<h3 class="description-main">Strategy</h3>
+					<p class="description-secondary">
+					  Our goal is to identify the business problem to walk away with
+					  the perfect and creative solution.
+					</p>
+				 </li>
+				 <li class="rules-list">
+					<div class="rules-list-svg">
+					  <svg width="64" height="64">
+						 <use href="./images/icons.svg#icon-clock-1"></use>
+					  </svg>
+					</div>
+					<h3 class="description-main">Punctuality</h3>
+					<p class="description-secondary">
+					  Bring the key message to the brand's audience for the best price
+					  within the shortest possible time.
+					</p>
+				 </li>
+				 <li class="rules-list">
+					<div class="rules-list-svg">
+					  <svg width="64" height="64">
+						 <use href="./images/icons.svg#icon-diagram-1"></use>
+					  </svg>
+					</div>
+					<h3 class="description-main">Diligence</h3>
+					<p class="description-secondary">
+					  Research and confirm brands that present the strongest digital
+					  growth opportunities and minimize risk.
+					</p>
+				 </li>
+				 <li class="rules-list">
+					<div class="rules-list-svg">
+					  <svg width="64" height="64">
+						 <use href="./images/icons.svg#icon-astronaut-1"></use>
+					  </svg>
+					</div>
+					<h3 class="description-main">Technologies</h3>
+					<p class="description-secondary">
+					  Design practice focused on digital experiences. We bring forth a
+					  deep passion for problem-solving.
+					</p>
+				 </li>
+			  </ul>
+			</div>
+		 </section>
 	 </main>
     <footer class="footer">
       <div class="container footer-container">
