--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
 			  </button>
 			</div>
 		 </section>
+		
 		 <section class="description section">
 			<div class="container">
 			  <h2 class="visually-hidden">Our Rules</h2>
@@ -198,8 +199,187 @@
 			  </ul>
 			</div>
 		 </section>
-		 <section class="section">
+		 <section class="team section">
 			<div class="container">
+			  <h2 class="team-our">Our Team</h2>
+			  <ul class="list team-mainlist">
+				 <li class="team-list">
+					<picture>
+						<source 
+						srcset="./images/Mark.jpg 1x,
+						./images/Mark-2x.jpg 2x"
+						type="image/jpeg">
+						<img  src="./images/Mark.jpg" alt="Mark_Photo" loading="lazy">
+				 </picture>
+					<div class="container-team">
+					  <h3 class="team-names">Mark Guerrero</h3>
+					  <p class="team-professions">Product Designer</p>
+					  <ul class="list social-list">
+						 <li class="social-item">
+							<a href="" class="svg-link">
+							  <svg class="social-link" width="16" height="16">
+								 <use href="./images/icons.svg#icon-instagram-2"></use>
+							  </svg>
+							</a>
+						 </li>
+						 <li class="social-item">
+							<a href="" class="svg-link">
+							  <svg class="social-link" width="16" height="16">
+								 <use href="./images/icons.svg#icon-twitter-1"></use>
+							  </svg>
+							</a>
+						 </li>
+						 <li class="social-item">
+							<a href="" class="svg-link">
+							  <svg class="social-link" width="16" height="16">
+								 <use href="./images/icons.svg#icon-facebook-1"></use>
+							  </svg>
+							</a>
+						 </li>
+						 <li class="social-item">
+							<a href="" class="svg-link">
+							  <svg class="social-link" width="16" height="16">
+								 <use href="./images/icons.svg#icon-linkedin-1"></use>
+							  </svg>
+							</a>
+						 </li>
+					  </ul>
+					</div>
+				 </li>
+				 <li class="team-list">
+					<picture>
+						<source 
+						srcset="./images/Tom.jpg 1x,
+						./images/Tom-2x.jpg 2x"
+						type="image/jpeg">
+						<img  src="./images/Tom.jpg" alt="Tom_Photo" loading="lazy">
+				 </picture>
+					<div class="container-team">
+					  <h3 class="team-names">Tom Ford</h3>
+					  <p class="team-professions">Frontend Developer</p>
+					  <ul class="list social-list">
+						 <li class="social-item">
+							<a href="" class="svg-link">
+							  <svg class="social-link" width="16" height="16">
+								 <use href="./images/icons.svg#icon-instagram-2"></use>
+							  </svg>
+							</a>
+						 </li>
+						 <li class="social-item">
+							<a href="" class="svg-link">
+							  <svg class="social-link" width="16" height="16">
+								 <use href="./images/icons.svg#icon-twitter-1"></use>
+							  </svg>
+							</a>
+						 </li>
+						 <li class="social-item">
+							<a href="" class="svg-link">
+							  <svg class="social-link" width="16" height="16">
+								 <use href="./images/icons.svg#icon-facebook-1"></use>
+							  </svg>
+							</a>
+						 </li>
+						 <li class="social-item">
+							<a href="" class="svg-link">
+							  <svg class="social-link" width="16" height="16">
+								 <use href="./images/icons.svg#icon-linkedin-1"></use>
+							  </svg>
+							</a>
+						 </li>
+					  </ul>
+					</div>
+				 </li>
+				 <li class="team-list">
+					<picture>
+						<source 
+						srcset="./images/Camila.jpg 1x,
+						./images/Camila-2x.jpg 2x"
+						type="image/jpeg">
+						<img  src="./images/Camila.jpg" alt="Camila_Photo" loading="lazy">
+				 </picture>
+					<div class="container-team">
+					  <h3 class="team-names">Camila Garcia</h3>
+					  <p class="team-professions">Marketing</p>
+					  <ul class="list social-list">
+						 <li class="social-item">
+							<a href="" class="svg-link">
+							  <svg class="social-link" width="16" height="16">
+								 <use href="./images/icons.svg#icon-instagram-2"></use>
+							  </svg>
+							</a>
+						 </li>
+						 <li class="social-item">
+							<a href="" class="svg-link">
+							  <svg class="social-link" width="16" height="16">
+								 <use href="./images/icons.svg#icon-twitter-1"></use>
+							  </svg>
+							</a>
+						 </li>
+						 <li class="social-item">
+							<a href="" class="svg-link">
+							  <svg class="social-link" width="16" height="16">
+								 <use href="./images/icons.svg#icon-facebook-1"></use>
+							  </svg>
+							</a>
+						 </li>
+						 <li class="social-item">
+							<a href="" class="svg-link">
+							  <svg class="social-link" width="16" height="16">
+								 <use href="./images/icons.svg#icon-linkedin-1"></use>
+							  </svg>
+							</a>
+						 </li>
+					  </ul>
+					</div>
+				 </li>
+				 <li class="team-list">
+					<picture>
+						<source 
+						srcset="./images/Daniel.jpg 1x,
+						./images/Daniel-2x.jpg 2x"
+						type="image/jpeg">
+						<img  src="./images/Daniel.jpg" alt="Daniel_Photo" loading="lazy">
+				 </picture>
+					<div class="container-team">
+					  <h3 class="team-names">Daniel Wilson</h3>
+					  <p class="team-professions">UI Designer</p>
+					  <ul class="list social-list">
+						 <li class="social-item">
+							<a href="" class="svg-link">
+							  <svg class="social-link" width="16" height="16">
+								 <use href="./images/icons.svg#icon-instagram-2"></use>
+							  </svg>
+							</a>
+						 </li>
+						 <li class="social-item">
+							<a href="" class="svg-link">
+							  <svg class="social-link" width="16" height="16">
+								 <use href="./images/icons.svg#icon-twitter-1"></use>
+							  </svg>
+							</a>
+						 </li>
+						 <li class="social-item">
+							<a href="" class="svg-link">
+							  <svg class="social-link" width="16" height="16">
+								 <use href="./images/icons.svg#icon-facebook-1"></use>
+							  </svg>
+							</a>
+						 </li>
+						 <li class="social-item">
+							<a href="" class="svg-link">
+							  <svg class="social-link" width="16" height="16">
+								 <use href="./images/icons.svg#icon-linkedin-1"></use>
+							  </svg>
+							</a>
+						 </li>
+					  </ul>
+					</div>
+				 </li>
+			  </ul>
+			</div>
+		 </section>
+		 <section class="section">
+			<div class="container customers-container">
 			  <h2 class="customers">Customers</h2>
 			  <ul class="customers-list list">
 				 <li class="customers-item">
