--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
         <address class="adress">
           <ul class="header-navigation-adress list">
             <li>
-              <a class="btn-adress link" href="mailto:info@devstudio.com"
+              <a class="btn-adress-nav link" href="mailto:info@devstudio.com"
                 >info@devstudio.com
               </a>
             </li>
             <li>
-              <a class="btn-adress link" href="tel:+110001111111"
+              <a class="btn-adress-nav link" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
             </li>
@@ -61,7 +61,6 @@
           </svg>
         </button>
 		  <div class="mobile__modal is-hidden" data-menu>
-			<div class="container">
 				<ul class="mobile__list list">
 					<li class="mobile__item ">
 					  <a href="./index1.html" class="mobile__header__nav link mobile__current">Studio</a>
@@ -129,8 +128,6 @@
 				  <use href="./images/icons.svg#icon-close"></use>
 				</svg>
 			 </button>
-			</div> 
-		
 	</div>
       </div>
     </header>
@@ -143,7 +140,6 @@
 			  </button>
 			</div>
 		 </section>
-		
 		 <section class="description section">
 			<div class="container">
 			  <h2 class="visually-hidden">Our Rules</h2>
@@ -378,8 +374,8 @@
 			  </ul>
 			</div>
 		 </section>
-		 <section class="section">
-			<div class="container customers-container">
+		 <section class="section customers-container">
+			<div class="container ">
 			  <h2 class="customers">Customers</h2>
 			  <ul class="customers-list list">
 				 <li class="customers-item">
